Fixed spacing in projects

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -304,7 +304,7 @@ html, body {
   justify-content: flex-end;
   max-width: 80%;
   margin: auto;
-  line-height: 1.1;
+  line-height: 1.4;
   font-size: 0.9rem;
   margin-top: 20px;
   margin-bottom: 18px;
